--- a/.github/workflows/ace5pro.yml
+++ b/.github/workflows/ace5pro.yml
@@ -9,7 +9,7 @@ on:
       FEIL:
         description: "配置文件"
         required: true
-        default: 'oneplus_13'
+        default: 'oneplus_ace5_pro_v3'
       CPUD:
         description: "处理器代号"
         required: true
@@ -40,8 +40,8 @@ on:
         type: choice
         options:
           - tag
-          - main
-        default: main
+          - susfs-main
+        default: susfs-main
       SUSFS_ENABLED:
         description: "添加 SUSFS"
         required: true
@@ -90,7 +90,7 @@ jobs:
       - name: Initialize repo and sync
         run: |
          mkdir kernel_workspace && cd kernel_workspace
-         repo init -u https://github.com/OnePlusOSS/kernel_manifest.git -b refs/heads/oneplus/${{ github.event.inputs.CPU }} -m ${{ github.event.inputs.FEIL }}.xml --depth=1
+         repo init -u https://github.com/aa123330/kernel_manifest.git -b refs/heads/oneplus/${{ github.event.inputs.CPU }} -m ${{ github.event.inputs.FEIL }}.xml --depth=1
          repo sync
          rm kernel_platform/common/android/abi_gki_protected_exports_* || echo "No protected exports!"
          rm kernel_platform/msm-kernel/android/abi_gki_protected_exports_* || echo "No protected exports!"
@@ -103,8 +103,8 @@ jobs:
         run: |
           if [[ "${{ github.event.inputs.kernelsu_version }}" == "tag" ]]; then
             echo "BRANCH=-" >> $GITHUB_ENV
-          elif [[ "${{ github.event.inputs.kernelsu_version }}" == "main" ]]; then
-            echo "BRANCH=-s susfs-dev" >> $GITHUB_ENV
+          elif [[ "${{ github.event.inputs.kernelsu_version }}" == "susfs-main" ]]; then
+            echo "BRANCH=-s susfs-main" >> $GITHUB_ENV
           fi
           
       - name: Add SukiSU-Ultra
